--- a/tufte2.css
+++ b/tufte2.css
@@ -205,6 +205,14 @@ article {
   line-height: 1; }
 
 /* line 203, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+.h2tufte_home {
+  font-family: "ff-meta-web-pro", sans-serif;
+  font-weight: 400;
+  margin-top: 2.1rem;
+  font-size: 2.2rem;
+  line-height: 1; }
+
+/* line 212, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 .h1tufte {
   font-family: "freight-sans-pro", sans-serif;
   font-weight: 400;
@@ -213,31 +221,31 @@ article {
   font-size: 3.2rem;
   line-height: 1; }
 
-/* line 213, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 222, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 .showcase {
   margin: 5px;
   background-color: white;
   color: black;
   padding: 5%; }
 
-/* line 225, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 234, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article {
   /* Chapter Epigraphs */
   /* end chapter epigraphs styles */
   /* Links: replicate underline that clears descenders */ }
-  /* line 226, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 235, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article section {
     margin-top: 1rem;
     padding-top: 1rem;
     padding-bottom: 1rem; }
-  /* line 231, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 240, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article ol,
   article ul,
   article dd,
   article dt {
     font-size: 1.06rem; }
-  /* line 239, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 248, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article dd,
   article dt {
@@ -247,51 +255,51 @@ article {
     margin-bottom: 0;
     padding-right: 0;
     vertical-align: baseline; }
-  /* line 255, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 264, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p, article dd {
     font-family: "ff-meta-web-pro", sans-serif !important; }
-  /* line 259, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 268, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article dt {
     font-family: "freight-sans-pro", sans-serif !important; }
-  /* line 263, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 272, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article dt {
     font-weight: bold; }
-  /* line 267, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 276, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p + p {
     margin-top: 0;
     text-indent: 1.86rem; }
-  /* line 272, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 281, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .firstpara {
     text-indent: inherit !important; }
-  /* line 276, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 285, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article br {
     line-height: 1.86rem; }
-  /* line 281, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 290, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph {
     margin: 5em 0; }
-  /* line 284, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 293, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote {
     margin-top: 1.86rem;
     margin-bottom: 1.86rem; }
-  /* line 288, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 297, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote,
   article div.epigraph > blockquote > p {
     font-style: italic; }
-  /* line 292, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 301, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote > footer {
     font-style: normal; }
-  /* line 295, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 304, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.epigraph > blockquote > footer > cite {
     font-style: italic; }
-  /* line 299, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 308, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote {
     border-left: none;
     font-size: 1.4rem; }
-  /* line 303, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 312, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote p {
     width: 50%;
     margin-right: 40px; }
-  /* line 307, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 316, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote footer {
     margin-top: 1.86rem;
     width: 50% !important;
@@ -299,17 +307,17 @@ article {
     text-align: right !important;
     font-family: "ff-meta-web-pro", sans-serif;
     color: inherit; }
-  /* line 315, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 324, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article section > ol,
   article section > ul {
     width: 45%;
     -webkit-padding-start: 5%;
     -webkit-padding-end: 5%; }
-  /* line 321, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 330, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article li {
     padding: 0.5rem 0;
     font-family: "ff-meta-web-pro", sans-serif; }
-  /* line 325, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 334, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure {
     padding: 0;
     border: 0;
@@ -320,7 +328,7 @@ article {
     -webkit-margin-start: 0;
     -webkit-margin-end: 0;
     margin: 1.86rem 0 1.86rem 0; }
-  /* line 336, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 345, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figcaption {
     float: right;
     clear: right;
@@ -331,17 +339,17 @@ article {
     vertical-align: baseline;
     position: relative;
     max-width: 40%; }
-  /* line 348, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 357, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure.fullwidth {
     margin-top: 1.86rem; }
-  /* line 352, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 361, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure.fullwidth figcaption {
     margin-right: 24%; }
-  /* line 356, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 365, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link,
   article a:visited {
     color: inherit; }
-  /* line 360, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 369, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link {
     text-decoration: none;
     background: -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#333, #333);
@@ -354,25 +362,25 @@ article {
     background-position: 0% 93%, 100% 93%, 0% 93%; }
 
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
-  /* line 376, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 385, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   a:link {
     background-position-y: 87%, 87%, 87%; } }
 
-/* line 381, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+/* line 390, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
 article {
   /* Sidenotes, margin notes, figures, captions */ }
-  /* line 382, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 391, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link::selection {
     text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
     background: #b4d5fe; }
-  /* line 389, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 398, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article a:link::-moz-selection {
     text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
     background: #b4d5fe; }
-  /* line 399, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 408, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article img {
     max-width: 100%; }
-  /* line 403, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 412, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote,
   article .marginnote {
     float: right;
@@ -386,42 +394,42 @@ article {
     vertical-align: baseline;
     position: relative;
     color: darkgray; }
-  /* line 418, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 427, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number {
     counter-increment: sidenote-counter; }
-  /* line 422, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 431, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number:after,
   article .sidenote:before {
     content: counter(sidenote-counter) " ";
     font-family: et-book-roman-old-style;
     position: relative;
     vertical-align: baseline; }
-  /* line 430, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 439, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote-number:after {
     content: counter(sidenote-counter);
     font-size: 1rem;
     top: -0.5rem;
     left: 0.1rem; }
-  /* line 437, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 446, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote:before {
     content: counter(sidenote-counter) " ";
     top: -0.5rem; }
-  /* line 442, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 451, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote .sidenote,
   article blockquote .marginnote {
     margin-right: -82%;
     min-width: 59%;
     text-align: left; }
-  /* line 449, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 458, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article footer,
   article dd,
   article dt {
     width: 50%; }
-  /* line 456, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 465, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article table {
     width: 50% !important; }
-  /* line 460, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 469, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .twocolumnlist {
     -webkit-column-count: 2;
     -moz-column-count: 2;
@@ -433,42 +441,42 @@ article {
     -ms-column-gap: 3em;
     -o-column-gap: 3em;
     column-gap: 3em; }
-  /* line 473, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 482, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .redline {
     color: red;
     background-color: yellow; }
-  /* line 478, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 487, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.fullwidth,
   article table.fullwidth {
     width: 100%; }
-  /* line 483, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 492, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.table-wrapper {
     overflow-x: auto;
     font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif; }
-  /* line 488, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 497, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sans {
     font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
     letter-spacing: .03em; }
-  /* line 493, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 502, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article code {
     font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
     font-size: 1.0rem;
     line-height: 1.42;
     color: rgba(0, 0, 0, 0.8);
     background-color: white; }
-  /* line 506, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 515, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sans > code {
     font-size: 1.2rem; }
-  /* line 510, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 519, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article h1 > code,
   article h2 > code,
   article h3 > code {
     font-size: 0.80em; }
-  /* line 516, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 525, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .marginnote > code,
   article .sidenote > code {
     font-size: 1rem; }
-  /* line 521, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 530, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article pre.code {
     font-size: 0.9rem;
     width: 52.5%;
@@ -477,75 +485,75 @@ article {
     border: none !important;
     background-color: white;
     overflow-x: auto; }
-  /* line 536, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 545, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article pre.code.fullwidth {
     width: 90%; }
-  /* line 540, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 549, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .fullwidth {
     max-width: 90%;
     clear: both; }
-  /* line 545, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 554, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article span.newthought {
     font-variant: small-caps;
     font-size: 1.2em; }
-  /* line 550, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 559, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article input.margin-toggle {
     display: none; }
-  /* line 554, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 563, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label.sidenote-number {
     display: inline; }
-  /* line 558, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 567, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label.margin-toggle:not(.sidenote-number) {
     display: none; }
 
 /* @group Desktop Only */
 @media only screen and (min-width: 1100px) and (max-width: 1920px) {
-  /* line 565, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 574, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   html {
     font-size: 15px; } }
 
 /* @group Mobile, Tablets, Small Computers */
 @media only screen and (min-width: 0) and (max-width: 1099px) {
-  /* line 572, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 581, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   html {
     font-size: 13px; }
-  /* line 579, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 588, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p {
     width: 100%; }
-  /* line 582, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 591, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article p,
   article footer {
     width: 100%; }
-  /* line 586, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 595, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article pre.code {
     width: 97%; }
-  /* line 589, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 598, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article ul {
     width: 85%; }
-  /* line 592, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 601, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figure {
     max-width: 90%; }
-  /* line 595, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 604, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article figcaption,
   article figure.fullwidth figcaption {
     margin-right: 0%;
     max-width: none; }
-  /* line 600, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 609, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote {
     margin-left: 1.5em;
     margin-right: 0em; }
-  /* line 604, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 613, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article blockquote p,
   article blockquote footer {
     width: 100%; }
-  /* line 608, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 617, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label.margin-toggle:not(.sidenote-number) {
     display: inline; }
-  /* line 611, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 620, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .sidenote,
   article .marginnote {
     display: none; }
-  /* line 615, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 624, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article .margin-toggle:checked + .sidenote,
   article .margin-toggle:checked + .marginnote {
     display: block;
@@ -556,14 +564,14 @@ article {
     margin: 1rem 2.5%;
     vertical-align: baseline;
     position: relative; }
-  /* line 626, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 635, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article label {
     cursor: pointer; }
-  /* line 629, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 638, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article div.table-wrapper,
   article table {
     width: 85%; }
-  /* line 633, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 642, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   article img {
     width: 100%; } }
 
