--- a/common_head.jade
+++ b/common_head.jade
@@ -27,7 +27,9 @@ mixin head_mixin(PageTitle, is_work)
             script(src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js")
             script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js")
             link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous")            
+            link(rel="stylesheet" href="work.css")
             link(rel="stylesheet" href="index.css")
+            
             
         link(rel="stylesheet" href="imagehover.min.css")
         
