--- a/tufte2.scss
+++ b/tufte2.scss
@@ -200,6 +200,15 @@ article {
     line-height: 1;
 }
 
+.h2tufte_home {
+    font-family: $font-stack;
+    font-weight: $fontweight;
+    margin-top: 2.1rem;
+    font-size: 2.2rem; // 33px
+    line-height: 1;
+}
+
+
 .h1tufte {
     font-family: $header-stack;
     font-weight: $fontweight;
